the Java 1.5 runtime. Java 1.5 was EOLed in October 2009. 

Following is a complete list of all changes in the new 1.10 release:

BUG FIXES IN 1.10
=================

* [CONFIGURATION-500] Attributes in xml config should apply to all entries of a list

  XMLConfiguration now adds attributes of elements defining a list to
  all list nodes.

* [CONFIGURATION-550] Missing conversion to char

  Conversion to Character is now supported.

* [CONFIGURATION-555] XMLConfiguration doesn't seem to be preserving whitespace 
                      for the current node where xml:space="preserve" is set.

  Fixed a bug in the handling of the xml:space attribute in XMLConfiguration. 
  The attribute is now also applied to the current element, not only to sub elements.

* [CONFIGURATION-556] Regression with SystemProperties in 1.8 and 1.9

  In 1.7 and before, any change to the system properties was immediately reflected in a 
  SystemConfiguration object. This behaviour broke in 1.8 and 1.9. This has been fixed
  for 1.10.

* [CONFIGURATION-557] Regression: MapConfiguration no longer accepts a Map<String, String>

  In 1.7 and before, it was possible to pass an arbitrary Map into the constructor of 
  MapConfiguration. With the generification in 1.8, this actually broke and it was no longer
  possible to pass in e.g. a Map<String, String> because the signature now required a 
  Map<String, Object>. Changing the constructor to accept a Map<String, ?> restores this.

  All of this is purely a compiler issue, the runtime itself does not see any of the generics
  due to the Java type erasure. 

* [CONFIGURATION-558] Configuration no longer accepts List<String> as default for getList()

  Similar to CONFIGURATION-557, the getList(String, List) method was generified to be
  getList(String, List<Object>) but needs to be getList(String, List<?>) so that code that
  used a more specific list (such as a List<String>) still compiles against the new API.


IMPROVEMENTS AND NEW FEATURES IN 1.10